<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackground"
    android:gravity="center_horizontal"
    android:clickable="true">

    <ImageView
        android:id="@+id/fragment_signup_image_user"
        android:background="@color/colorPrimary"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/fragment_signup_edit_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/fragment_signup_edit_email"
        android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/fragment_signup_edit_password"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/fragment_signup_button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:background="@android:color/white"/>

    <ProgressBar
        android:id="@+id/fragment_signup_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="invisible"/>

</LinearLayout>